tests/baselines/reference/APISample_WatchWithDefaults.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8922,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8922,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9182,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9182,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9532,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9532,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9556,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9556,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9643,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9643,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10808,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10808,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10819,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10819,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10829,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10829,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10904,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10904,47): error TS1005: ';' expected.
typescript_standalone.d.ts(10961,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10961,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11015,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11015,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11035,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11035,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11045,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11045,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11079,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11079,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11082,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11082,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11104,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11104,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11130,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11130,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11133,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11133,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11145,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11145,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11175,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11175,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11209,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11209,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11220,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11220,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11244,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11244,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11252,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11252,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11256,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11256,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11286,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11286,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11329,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11329,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11516,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11516,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11518,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11518,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11522,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11522,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11524,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11524,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11526,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11526,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11528,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11528,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11530,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11530,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11539,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11539,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11541,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11541,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11553,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11553,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11555,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11555,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11561,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11561,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11579,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11579,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11581,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11581,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11583,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11583,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11585,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11585,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11587,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11587,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11589,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11589,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11591,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11591,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11593,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11593,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11665,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11665,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11667,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11667,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11669,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11669,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11671,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11671,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11747,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11747,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_WatchWithDefaults.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. This uses default sys interface without having to pass anything
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var console: any;
    
    import ts = require("typescript");
    
    function watchMain() {
        const configPath = ts.findConfigFile(/*searchPath*/ "./", ts.sys.fileExists, "tsconfig.json");
        if (!configPath) {
            throw new Error("Could not find a valid 'tsconfig.json'.");
        }
    
        // TypeScript can use several different program creation "strategies":
        //  * ts.createEmitAndSemanticDiagnosticsBuilderProgram,
        //  * ts.createSemanticDiagnosticsBuilderProgram
        //  * ts.createAbstractBuilder
        // The first two produce "builder programs". These use an incremental strategy to only re-check and emit files whose
        // contents may have changed, or whose dependencies may have changes which may impact change the result of prior type-check and emit.
        // The last uses an ordinary program which does a full type check after every change.
        // Between `createEmitAndSemanticDiagnosticsBuilderProgram` and `createSemanticDiagnosticsBuilderProgram`, the only difference is emit.
        // For pure type-checking scenarios, or when another tool/process handles emit, using `createSemanticDiagnosticsBuilderProgram` may be more desirable.
    
        // Note that there is another overload for `createWatchCompilerHost` that takes a set of root files.
        const host = ts.createWatchCompilerHost(configPath, {}, ts.sys);
    
        // You can technically override any given hook on the host, though you probably don't need to.
        // Note that we're assuming `origCreateProgram` and `origPostProgramCreate` doesn't use `this` at all.
        const origCreateProgram = host.createProgram;
        host.createProgram = (rootNames, options, host, oldProgram) => {
            console.log("** We're about to create the program! **");
            return origCreateProgram(rootNames, options, host, oldProgram);
        }
        const origPostProgramCreate = host.afterProgramCreate;
    
        host.afterProgramCreate = program => {
            console.log("** We finished making the program! **");
            origPostProgramCreate!(program);
        };
    
        // `createWatchProgram` creates an initial program, watches files, and updates the program over time.
        ts.createWatchProgram(host);
    }
    
    watchMain();
    